# ToDoList

./: CMakeLists.txt
Proto/: Model.proto  TaskService.proto
src/: client.cpp  main.cpp  server.cpp
src/CLI/Controller/: ParseMachine.cpp  ParseMachine.h  StateMachine.cpp  StateMachine.h  StateMachineCreator.h
src/CLI/Model/: Buffer.h  ConsoleContext.h  Context.h  ParameterStorage.h
src/CLI/Namespaces/: CommandMapCreator.h  GraphCreator.h  ParseMapCreator.h  StateMachineCreator.h  ValidMapCreator.h  Validate.h
src/CLI/Proxy/: ClientServer.cpp  ClientServer.h  Proxy.h
src/CLI/Proxy/Data/: ReturnType.h  TaskDTO.cpp  TaskDTO.h  TaskID.h  TaskPriority.h
src/CLI/States/Command/: AddSubtaskCommand.cpp  AddTaskCommand.cpp  AddTaskCommand.h  CommandOption.cpp  CommandOption.h  CommandState.h  Commands.cpp  Commands.h  CompleteTaskCommand.cpp  DeleteTaskCommand.cpp  Edit.cpp  Edit.h  EditTaskCommand.cpp  EditTaskCommand.h  GraphCreator.h  LoadCommand.cpp  Option.cpp  Option.h  PostponeTaskCommand.cpp  SaveCommand.cpp  SaveCommand.h  ShowAllTasksCommand.cpp  ShowTasksForTodayCommand.cpp  ShowTasksForWeek.cpp  SubmenuCommand.cpp  ValidMapCreator.h  Validate.h  View.cpp  View.h  ViewTaskCommand.cpp
src/CLI/States/Parse/: ParseDate.cpp  ParseID.cpp  ParseLabel.cpp  ParseName.h  ParseState.h  Parser.cpp  Parser.h
src/CLI/Utils/: ConsoleIO.cpp  ConsoleIO.h  IO.h  ProtoConvertor.cpp  ReturnTypeCreator.h
src/CLI/Utils/Convertors/: ProtoConvertor.cpp  ProtoConvertor.h
src/CLI/Utils/Creators/: CommandMapCreator.h  GraphCreator.h  ParseMapCreator.h  ReturnTypeCreator.h  StateMachineCreator.h  ValidMapCreator.h  Validate.h
src/CLI/View/CommandStates/: AddSubtaskCommand.cpp  AddSubtaskCommand.h  AddTaskCommand.cpp  CommandOption.cpp  CommandState.h  CompleteTaskCommand.cpp  CompleteTaskCommand.h  DeleteTaskCommand.cpp  DeleteTaskCommand.h  EditTaskCommand.cpp  LoadCommand.cpp  LoadCommand.h  PostponeTaskCommand.cpp  PostponeTaskCommand.h  SaveCommand.cpp  ShowAllTasksCommand.cpp  ShowAllTasksCommand.h  ShowTasksForTodayCommand.cpp  ShowTasksForTodayCommand.h  ShowTasksForWeek.cpp  ShowTasksForWeek.h  SubmenuCommand.cpp  SubmenuCommand.h  ViewTaskCommand.cpp  ViewTaskCommand.h
src/CLI/View/ParseStates/: ParseDate.h  ParseFilename.cpp  ParseFilename.h  ParseID.h  ParseLabel.h  ParseName.cpp  ParsePriority.cpp  ParsePriority.h  ParseState.h
src/Core/api/: GRPCServer.cpp  GRPCServer.h  ReturnType.h  ReturnTypeCreator.h  ServiceTaskDTO.cpp  ServiceTaskDTO.h  TaskDTO.h  TaskID.cpp  TaskID.h  TaskService.cpp  TaskService.h  TaskServiceCreator.h  TaskServiceInterface.h
src/Core/logic/: IDGenerator.cpp  IDGenerator.h  TaskConvertor.cpp  TaskConvertor.h  ViewByPriority.cpp
src/Core/model/: DataHolder.cpp  DataHolder.h  DataHolderCreator.h  DataInterface.h  FullTask.cpp  FullTask.h  ModelTaskConvertor.h  ModelTaskDTO.cpp  ModelTaskDTO.h  Task.h  TaskStorage.cpp  TaskStorage.h  TaskStorageInterface.h
src/Core/model/api/: DataHolder.cpp  DataInterface.h
src/Core/model/logic/: IDGeneratorInterface.h  ViewInterface.h
src/Core/persistence/: ModelPersister.cpp  ModelPersister.h  Persister.h  PriorityConvertor.h  ProtoTaskConvertor.cpp  ProtoTaskConvertor.h
src/Core/utils/: ModelTaskConvertor.h  PriorityConvertor.cpp  ProtoResponse.h  ProtoTaskConvertor.cpp  ReturnTypeCreator.h  TaskConvertor.cpp  TaskConvertor.h  TaskServiceCreator.h
src/Core/utils/Convertors/: ModelTaskConvertor.cpp  (+2 more)
src/api/: Creator.h  Injector.h  ReturnType.h  ReturnTypeCreator.h  TaskCreationResult.cpp  TaskCreationResult.h  TaskDTO.cpp  TaskDTO.h  TaskID.h  TaskPriority.h  TaskService.cpp  TaskService.h  TaskServiceCreator.h  TaskServiceInterface.h
src/logic/: Cleaner.cpp  Cleaner.h  Collector.cpp  Collector.h  Convertor.cpp  Convertor.h  DateLogic.h  DateView.cpp  DateView.h  FullTask.cpp  FullTask.h  IDGenerator.cpp  IDGenerator.h  IDGeneratorInterface.h  StorageByDate.cpp  StorageByDate.h  StorageByPrior.cpp  StorageByPrior.h  StorageByPriority.cpp  StorageByPriority.h  StorageForSharedPtr.cpp  StorageForSharedPtr.h  TaskConvertor.cpp  TaskConvertor.h  TaskDTO.cpp  TaskDTO.h  View.cpp  View.h  ViewByDate.cpp  ViewByDate.h  ViewByPriority.cpp  ViewByPriority.h  ViewInterface.h
src/model/: Date.cpp  Date.h  FullTask.cpp  FullTask.h  Task.h  TaskID.cpp  TaskID.h  TaskStorage.cpp  TaskStorage.h  TaskStorageInterface.h
tests/CLI/: ConsoleContextTest.cpp  ParseDateTest.cpp  ParseFilenameTest.cpp  ParseIDTest.cpp  ParseLabelTest.cpp  ParseMachineTest.cpp  ParseNameTest.cpp  ParsePriorityTest.cpp  ParserTest.cpp  ProtoConvertorTest.cpp
tests/CLI/CommandStates/: AddSubtaskTest.cpp  AddTaskTest.cpp  CompleteTaskTest.cpp  DeleteTaskTest.cpp  EditTaskTest.cpp  LoadTest.cpp  OptionTest.cpp  PostponeTaskTest.cpp  SaveTest.cpp  ShowAllTasksTest.cpp  ShowTasksForTodayTest.cpp  ShowTasksForWeekTest.cpp  SubmenuTest.cpp  ViewTaskTest.cpp
tests/CLI/Mock/: ServiceMock.h
tests/Core/Mock/: GeneratorMock.h  ModelMock.h  StorageMock.h  ViewMock.h
tests/Core/api/: GRPCServerTest.cpp  TaskDTOTest.cpp  TaskIDTest.cpp  TaskServiceTest.cpp
tests/Core/logic/: IDGeneratorTest.cpp  TaskConvertorTest.cpp  ViewByDateTest.cpp  ViewByPriorityTest.cpp
tests/Core/model/: DataHolderTest.cpp  FullTaskTest.cpp  TaskStorageTest.cpp  TaskTest.cpp
tests/Core/persistence/: ModelPersisterTest.cpp  PriorityConvertorTest.cpp  ProtoTaskConvertorTest.cpp
tests/Core/utils/: PriorityConvertorTest.cpp  ProtoTaskConvertorTest.cpp  TaskConvertorTest.cpp
tests/Mock/: ConsoleIOMock.h  GeneratorMock.h  ModelMock.h  ServiceMock.h  StorageMock.h  ViewMock.h
tests/api/: TaskCreationResultTest.cpp  TaskDTOTest.cpp  TaskIDTest.cpp  TaskServiceTest.cpp
tests/logic/: CleanerTest.cpp  ConvertorTest.cpp  FullTaskTest.cpp  IDGeneratorTest.cpp  StorageByDateTest.cpp  StorageByPriorTest.cpp  StorageByPriorityTest.cpp  StorageForSharedPtrTest.cpp  TaskConvertorTest.cpp  TaskDTOTest.cpp  ViewByDateTest.cpp  ViewByPriorityTest.cpp  ViewTest.cpp
tests/model/: DateTest.cpp  FullTaskTest.cpp  TaskIDTest.cpp  TaskStorageTest.cpp  TaskTest.cpp
(+4 files in other folders)
